{
  "version": 4,
  "terraform_version": "1.5.4",
  "serial": 14,
  "lineage": "90de081e-8d2f-2ed9-46ac-91781d9e39af",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "ec2-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-053b0d53c279acc90",
            "arn": "arn:aws:ec2:us-east-1:189754735433:instance/i-087c037805ee5d87b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_block_device": [
              {
                "delete_on_termination": false,
                "device_name": "/dev/sdf",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0476b4bafd8aa3283",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-087c037805ee5d87b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-07d488cca8cebe509",
            "private_dns": "ip-10-0-0-178.ec2.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.0.178",
            "public_ip": "54.163.201.152",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-00993595e1174a1a4",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-06c6db98a684bfd32",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0d55c686a63a3dcbd"
            ]
          },
          "dependencies": [
            "aws_security_group.main-security-group",
            "aws_subnet.public-subnet",
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "assignment-2-vpc-igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:internet-gateway/igw-0336caf967e56a63d",
            "id": "igw-0336caf967e56a63d",
            "owner_id": "189754735433",
            "vpc_id": "vpc-006811a5fb0306262"
          },
          "dependencies": [
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "NACL",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:network-acl/acl-0a3f16bacf5359420",
            "egress": [],
            "id": "acl-0a3f16bacf5359420",
            "ingress": [],
            "owner_id": "189754735433",
            "subnet_ids": [
              "subnet-06c6db98a684bfd32"
            ],
            "tags": {
              "name": "NACL"
            },
            "tags_all": {
              "name": "NACL"
            },
            "vpc_id": "vpc-006811a5fb0306262"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_association",
      "name": "NACL-assosiation",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "aclassoc-0eeab40e0cae648af",
            "network_acl_id": "acl-0a3f16bacf5359420",
            "subnet_id": "subnet-06c6db98a684bfd32"
          },
          "dependencies": [
            "aws_network_acl.NACL",
            "aws_subnet.public-subnet",
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:route-table/rtb-0c900dd86bc5a8473",
            "id": "rtb-0c900dd86bc5a8473",
            "owner_id": "189754735433",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "name": "public-route-table-tags"
            },
            "tags_all": {
              "name": "public-route-table-tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-006811a5fb0306262"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a9d7a5cf8b9514e0",
            "route_table_id": "rtb-0c900dd86bc5a8473",
            "subnet_id": "subnet-06c6db98a684bfd32"
          },
          "dependencies": [
            "aws_route_table.public-route-table",
            "aws_subnet.public-subnet",
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "main-security-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:security-group/sg-0d55c686a63a3dcbd",
            "description": "inbound for all IPs -SSH, HTTP. outbound for all protocols and types",
            "egress": [],
            "id": "sg-0d55c686a63a3dcbd",
            "ingress": [],
            "name": "main-security-group",
            "name_prefix": "",
            "owner_id": "189754735433",
            "revoke_rules_on_delete": false,
            "tags": {
              "name": "main_security group tags"
            },
            "tags_all": {
              "name": "main_security group tags"
            },
            "timeouts": null,
            "vpc_id": "vpc-006811a5fb0306262"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:subnet/subnet-06c6db98a684bfd32",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "10.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-06c6db98a684bfd32",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "189754735433",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "name": "public-subnet-tags"
            },
            "tags_all": {
              "name": "public-subnet-tags"
            },
            "vpc_id": "vpc-006811a5fb0306262"
          },
          "dependencies": [
            "aws_vpc.assignment2-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "assignment2-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:189754735433:vpc/vpc-006811a5fb0306262",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ea1fb25482bad4ad",
            "default_route_table_id": "rtb-0886455f75f20759f",
            "default_security_group_id": "sg-0a4db14ec7b39ff7a",
            "dhcp_options_id": "dopt-021298c7332782e0c",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-006811a5fb0306262",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0886455f75f20759f",
            "owner_id": "189754735433",
            "tags": {
              "name": "assignment2-vpc"
            },
            "tags_all": {
              "name": "assignment2-vpc"
            }
          }
        }
      ]
    }
  ]
}